

OSG News (most significant items from ChangeLog)
================================================

24th January 2003 - OpenSceneGraph-0.9.3.tar.gz

    >>> adds support navigational light points, multi-threaded dynamic
    >>> paging of Terrapage databases, ARB_vertex_program extension, 
    >>> DirectD .x model loader, and integration with OpenProducer for 
    >>> multi-threaded, multi-window/pipe rendering.

    Added osgProducer library which integrates the OpenSceneGraph seemlessly
    with OpenProducer to provide runtime configurable management of windows
    and multipipe graphic systems.  The osgproducer demo illustrate how
    developers can write applications very simply that harness the power
    of the OpenProducer and OpenSceneGraph in an extremely flexible way.
    OpenProducer can be downloaded from:
    http://www.andesengineering.com/BlueMarbleViewer/producer_install.html

    Support added for dynamic paging of Terrage databases, the required
    multi-threading is set up by defult.  All the end user application need
    to do is load the database and the paging then happens automatically -
    without any need for intervention by the users application.

    Addition of osgSim which is NodeKit designed for visual simulation
    market, currently features high fidelity light points support.  Light
    point sectors, blink sequences and groups, and light point fading are 
    all supported.

    From Brede Johansen, support added for the ARB VertexProgram extension
    with osgvertexprogram demo showing reflection and refraction in action, and 
    osgpbuffer demo for Win32.
    
    From Ulrich Hertlein, new DirectX .x model loader.

    From Tree, Support for encoded text types in osgText.
    
    New osgshadowtexture demo which illustrates how to create
    dynamic shadow textures in your scene.

    New osglogo demo - features anti-aliased TrueType text and animation.
    
    The app phase of operations on the scene graph has been renamed